# Retro-Snake-Game-C-

./: .gitignore  CMakeLists.txt  CMakePresets.json  Food.cpp  Food.h  README.md  globalVariables.h  snake.cpp  snake.h  snakeGamee.cpp
.cache/clangd/index/: Food.cpp.BFDC19A974C13206.idx  Food.h.3384DECB8F735E77.idx  globalVariables.h.D32F9110FE0067CC.idx  snake.cpp.E1D42513AC931B4F.idx  snake.h.8B9542C0E897D18A.idx  snakeGamee.cpp.4145602D26942505.idx
.github/workflows/: deploy-pages.yml
web/: index.data  index.html  index.js  index.wasm  shell.html
